--- a/dos33.html
+++ b/dos33.html
@@ -6683,42 +6683,42 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
 3A3E:BA BB BC       080             DFB $BA,$BB,$BC
 3A41:BD BE BF       081             DFB $BD,$BE,$BF
 3A44:CB CD CE       082             DFB $CB,$CD,$CE
-                    083 
-                    084 
-                    085 
-                    086 
-                    087 
-                    088 
-                    089 
-                    090 
-                    091 
-                    092 
-                    093 
-                    094 
-                    095 
-                    096 
-                    097 
-                    098 
-                    099 
-                    100 
-                    101 
-                    102 
-                    103 
-                    104 
-                    105 
-                    106 
-                    107 
-                    108 
-                    109 
-                    110 
-                    111 
-                    112 
-                    113 
-                    114 
-                    115 
-                    116 
-                    117 
-                    118 
+3A47:               083             DFB $CF,$D3,$D6
+                    084             DFB $D7,$D9,$DA
+                    085             DFB $DB,$DC,$DD
+                    086             DFB $DE,$DF,$E5
+                    087             DFB $E6,$E7,$E9
+                    088             DFB $EA,$EB,$EC
+                    089             DFB $ED,$EE,$EF
+                    090             DFB $F2,$F3,$F4
+                    091             DFB $F5,$F6,$F7
+                    092             DFB $F9,$FA,$FB
+                    093             DFB $FC,$FD,$FE
+                    094             DFB $FF
+                    095             PAGE
+                    096 ***************************
+                    097 *                         *
+                    098 *      7-BIT TO 6-BIT     *
+                    099 *     'DENIBLIZE' TABL    *
+                    100 *    (16-SECTOR FORMAT)   *
+                    101 *                         *
+                    102 *       VALID CODES       *
+                    103 *     $96 TO $FF ONLY.    *
+                    104 *                         *
+                    105 *                         *
+                    106 *   CODES WITH MORE THAN  *
+                    107 *   ONE PAIR OF ADJACENT  *
+                    108 *    ZEROES OR WITH NO    *
+                    109 *   ADJACENT ONES (EXCEPT *
+                    110 *    BIT 7) ARE EXCLUDED. *
+                    111 *                         *
+                    112 * THIS TABLE *MUST* BE    *
+                    113 * ALIGNED AT THE END OF   *
+                    114 * A PAGE IN MEMORY!!!     *
+                    115 ***************************
+                    116 <a class="d"    name='XP'         >XP          </a>EQU &lt;*          ;CURRENT PAGE ADDRESS
+                    117 <a class="d"    name='DNIBL'      >DNIBL       </a>EQU 256*XP      ;DNIBL  TABLE PAGE              ; See <a class='f' href='#READ4'>READ4</a>
+                    118             PAGE
                     119 
                     120 
                     121 
