--- a/dos33.html
+++ b/dos33.html
@@ -6718,7 +6718,7 @@ Let the complete clusterfrak of bad design commence in <a class='link' href="htt
                     115 ***************************
                     116 <a class="d"    name='XP'         >XP          </a>EQU &lt;*          ;CURRENT PAGE ADDRESS
                     117 <a class="d"    name='DNIBL'      >DNIBL       </a>EQU 256*XP      ;DNIBL  TABLE PAGE              ; See <a class='f' href='#READ4'>READ4</a>
-                    118             PAGE
+<hr>                    118             PAGE                                            ; === Page <a class='page' name='page99'>99</a> ===
                     119 
                     120 
                     121 
