--- a/dos33.html
+++ b/dos33.html
@@ -2800,7 +2800,7 @@ With that "legalese" out of the way ... enjoy the read!
 26AB:90 16          007             BCC DG3         ; BR IF NOT ERROR
                     008 ;
 26AD:AD C5 35       009             LDA CCBSTA      ;GET RETURN CODE
-26B0:C9 05          010             CMP #<span class='n'>5</span>                                          ; <a class='magic' name='_26B1'>magic number</a>
+26B0:C9 05          010             CMP #<span class='n'>5</span>                                          ; <a class='magic' name='_26B1'>magic number</a> <span class='todo'>TODO</span>
 26B2:F0 03          011             BEQ YESEOF
 26B4:4C 5E 36       012             JMP CLOSFILE    ;NO. CLOSE &amp; COMPLAIN
 26B7:4C 92 36       013 <a class='f' name='YESEOF'   >YESEOF      </a>JMP EOFFIX      ;MAYBE FIX IT UP?
