--- a/dos33.html
+++ b/dos33.html
@@ -3919,7 +3919,7 @@ With that "legalese" out of the way ... enjoy the read!
 2CE3:0D D3 35       282             ORA DCBWRF
 2CE6:8D D5 35       283             STA DCBWRF
                     284 ;
-2CE9:20 5B 31       285             JSR INCRRB      ; INCR REL REC BYTE             ;[.. <a class='mem' name='_2CE9'>wastes</a> 3 bytes
+2CE9:20 5B 31       285             JSR <a class='x' href='#INCRRB'>INCRRB</a>      ; INCR REL REC BYTE             ;[.. <a class='mem' name='_2CE9'>wastes</a> 3 bytes
 2CEC:4C 94 31       286             JMP INCSCB      ; INCR SECTOR BYTE              ; ..] <span class='code'>JMP INCBYT</span> = (<a class='x' href='#GETBYT'>GETBYT</a>+7) = Line #<a class='line' href='#FOPCLRW.237'>237</a>
 </pre>
 
